--- a/Methodology.tex
+++ b/Methodology.tex
@@ -511,9 +511,9 @@ The SM mass-specific absorption coefficient was determined by dividing the absor
 
 The following approach was used to determine phase function\label{pag:phasefn} for both the chlorophyll and mineral particle components. Ecolight was run several times with the different phase functions from the library of discretized Fournier-Forand phase functions files supplied with Ecolight 5.2 to create a LUT of reflectance spectra, but maintaining the rest of the parameters the same. These parameters corresponded to the ONTNS water sample. The different reflectance spectra generated as output were compared with the reflectance measured {\it in situ}. The best match was determining by choosing the lowest root mean squared error (RMSE) between the reflectance measured {\it in situ} and the simulated reflectance spectra.
 
-It was determined that the best matched corresponds to the discretized Fournier-Forand phase function with a backscatter equal to $0.010$, i.e. $1\%$ of backscatter fraction (file FFbb010.dpf in Ecolight)\todo{correct alignment}. Therefore, this discretized Fournier-Forand phase function is used for both the chlorophyll and SM. \autoref{fig:BestMatchONTNS} illustrates the reflectance measured {\it in situ} (red solid line) and the best match reflectance from the LUT (blue solid line), generated with a discretized Fournier-Forand phase function of 0.010 backscatter fraction. It can be seen in \autoref{fig:BestMatchONTNS} that both spectra agree in values above $550nm$, but not below this wavelength. This suggests that there is still room for improvement in the determination of the phase function and rest of the parameters in the Ecolight model.
+It was determined that the best matched corresponds to the discretized Fournier-Forand phase function with a backscatter equal to $0.010$, i.e. $1\%$ of backscatter fraction (file FFbb010.\-dpf in Ecolight). Therefore, this discretized Fournier-Forand phase function is used for both the chlorophyll and SM. \autoref{fig:BestMatchONTNS} illustrates the reflectance measured {\it in situ} (red solid line) and the best match reflectance from the LUT (blue solid line), generated with a discretized Fournier-Forand phase function of 0.010 backscatter fraction. It can be seen in \autoref{fig:BestMatchONTNS} that both spectra agree in values above $550nm$, but not below this wavelength. This suggests that there is still room for improvement in the determination of the phase function and rest of the parameters in the Ecolight model.
 
-The following parameters were input to Ecolight in order to simulate the Landsat acquisition conditions. The illumination conditions were input to Ecolight by specifying the solar zenith angle and day of the year that matched the Landsat 8 image. Internal sources and inelastic scatter were not included in the simulations. The wavelength range was $[400nm,1000nm]$\todo{correct alignment!}, with a $1nm$ step. Default values for the air-water surface conditions were used, with a windspeed equal to $5m/s$, a real index of refraction equal to $n=1.34$, and the semi-empirical sky model (based on RADTRAN-X). Recall that Hydrolight uses a Cox-Munk air-water surface model that parameterizes gravity and capillary waves via the wind speed \citep{Cox1954_mea_sea,Cox1954_stats_sea_surf}. Finally, the bottom boundary condition used was ``the water column is infinitely deep.''
+The following parameters were input to Ecolight in order to simulate the Landsat acquisition conditions. The illumination conditions were input to Ecolight by specifying the solar zenith angle and day of the year that matched the Landsat 8 image. Internal sources and inelastic scatter were not included in the simulations. The wavelength range was $[400nm,1000\-nm]$, with a $1nm$ step. Default values for the air-water surface conditions were used, with a windspeed equal to $5m/s$, a real index of refraction equal to $n=1.34$, and the semi-empirical sky model (based on RADTRAN-X). Recall that Hydrolight uses a Cox-Munk air-water surface model that parameterizes gravity and capillary waves via the wind speed \citep{Cox1954_mea_sea,Cox1954_stats_sea_surf}. Finally, the bottom boundary condition used was ``the water column is infinitely deep.''
 
 The best matched spectra in the LUT is used as the reflectance spectra of the dark pixel in the MoB-ELM method. This reflectance is further spectrally sampled to the Landsat 8 response using the OLI's sensor response obtained from ENVI. 
 
