--- a/Results.tex
+++ b/Results.tex
@@ -1053,7 +1053,7 @@ In order to compare the results from the developed CPA concentration retrieval w
 \end{gathered}
 \end{equation}
 
-\noindent where $a_0-a_4$ are the empirical regression coefficients. The empirical coefficients used in this study were the tuned values for OLI provided in SeaDAS (chloc3\_coef = [0.2412,-2.0546,1.1776,-0.5538,-0.4570]).
+\noindent where $a_0-a_4$ are the empirical regression coefficients. The empirical coefficients used in this study were the tuned values for OLI provided in SeaDAS ({\tt chloc3\_coef} = [0.2412,\--2.0546,1.1776,-0.5538,-0.4570]).
 % --------------- end SPIE SD
 \autoref{fig:chlor_amaps} shows the $C_a$ maps obtained with the different methods for the 09-19-2013 scene. All the methods behave in a similar way for the clear water (lake), although some variability may not be visually noticeable due to the way the image is displayed\todo{change to log scale?}. For the more turbid waters (ponds), the algorithms differ quite significantly. 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
