--- a/javier_bibPhD.bib
+++ b/javier_bibPhD.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Javier Concha First at 2015-11-15 16:31:19 -0500 
+%% Created for Javier Concha First at 2015-12-14 13:39:25 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{StandardMethodsWater2011,
+	Author = {APHA},
+	Date-Added = {2015-12-14 18:24:53 +0000},
+	Date-Modified = {2015-12-14 18:39:22 +0000},
+	Publisher = {American Public Health Association and American Water Works Association and Water Environment Federation},
+	Title = {Standard Methods for the Examination of Water and Wastewater: 10200 Plankton},
+	Year = {2011}}
 
 @manual{Tyler2013_SPM_protocol,
 	Address = {Rochester, NY},
